// Wrapper for all messages sent between peers on a single stream. The wrapper
// allows us to send multiple message types on a single bidirectional gRPC
// stream RPC service. The message is defined by it's type, and the wrapper
// holds oneof the messages.
syntax = "proto3";
package pb;

import "epaxos.proto";

// Specifies the message type in a peer request and reply
enum Type {
    UNKNOWN = 0;
    PREACCEPT = 1;
    ACCEPT = 2;
    COMMIT = 3;
    BEACON = 4;
}

// A wrapper message that can contain one of the request message types.
message PeerRequest {
    Type type = 1;     // The type of the request
    string sender = 2; // The unique name/hostname of the message origination

    // only one of these fields can be set, and the field that is set should
    // match the message type described above.
    oneof message {
        PreacceptRequest preaccept = 11;
        AcceptRequest accept = 12;
        CommitRequest commit = 13;
        BeaconRequest beacon = 14;
    }
}

// A wrapper message that can contain one of the reply message types.
message PeerReply {
    Type type = 1;     // The type of the reply
    string sender = 2; // The unique name/hostname of the message origination
    bool success = 3;  // If the request succeded or not

    // only one of these fields can be set, and the field that is set should
    // match the message type described above.
    oneof message {
        PreacceptReply preaccept = 11;
        AcceptReply accept = 12;
        CommitReply commit = 13;
        BeaconReply beacon = 14;
    }
}